cmake_minimum_required(VERSION 3.0.0)
project(sseClock VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include(CTest)
enable_testing()

include(FetchContent)
#find_package(Threads REQUIRED)

set(FMT_SYSTEM_HEADERS ON CACHE INTERNAL "Expose headers with marking them as system.")
FetchContent_Declare(fmt
    GIT_REPOSITORY https://github.com/fmtlib/fmt.git
    GIT_TAG 8.1.1
    UPDATE_DISCONNECTED ON
    )
FetchContent_MakeAvailable(fmt)
target_compile_definitions(fmt INTERFACE FMT_STRING)

set(JSON_Diagnostics ON CACHE INTERNAL "")
set(JSON_SystemInclude ON CACHE INTERNAL "")
FetchContent_Declare(nlohmann_json
    GIT_REPOSITORY https://github.com/nlohmann/json.git
    GIT_TAG v3.10.5
    UPDATE_DISCONNECTED ON
    )
FetchContent_MakeAvailable(nlohmann_json)

# cURL options
set(BUILD_CURL_EXE OFF CACHE INTERNAL "")
set(BUILD_SHARED_LIBS OFF CACHE INTERNAL "")
seT(ENABLE_IPV6 OFF CACHE INTERNAL "")
#set(USE_WIN32_LDAP OFF CACHE INTERNAL "")
#set(USE_LIBIDN2 OFF CACHE INTERNAL "")
set(CMAKE_USE_LIBSSH2 OFF CACHE INTERNAL "")
#set(ENABLE_UNIX_SOCKETS OFF CACHE INTERNAL "")
set(SSL_ENABLED OFF CACHE INTERNAL "")
set(HAVE_LIBZ OFF CACHE INTERNAL "")

set(CURL_DISABLE_ALTSVC ON CACHE INTERNAL "")
set(CURL_DISABLE_COOKIES ON CACHE INTERNAL "")
set(CURL_DISABLE_CRYPTO_AUTH ON CACHE INTERNAL "")
set(CURL_DISABLE_DICT ON CACHE INTERNAL "")
set(CURL_DISABLE_DOH ON CACHE INTERNAL "")
set(CURL_DISABLE_FILE ON CACHE INTERNAL "")
set(CURL_DISABLE_FTP ON CACHE INTERNAL "")
set(CURL_DISABLE_GETOPTIONS ON CACHE INTERNAL "")
set(CURL_DISABLE_GOPHER ON CACHE INTERNAL "")
set(CURL_DISABLE_HSTS ON CACHE INTERNAL "")
set(CURL_DISABLE_HTTP_AUTH ON CACHE INTERNAL "")
set(CURL_DISABLE_IMAP ON CACHE INTERNAL "")
set(CURL_DISABLE_LDAP ON CACHE INTERNAL "")
set(CURL_DISABLE_LDAPS ON CACHE INTERNAL "")
set(CURL_DISABLE_MQTT ON CACHE INTERNAL "")
set(CURL_DISABLE_NETRC ON CACHE INTERNAL "")
set(CURL_DISABLE_NTLM ON CACHE INTERNAL "")
set(CURL_DISABLE_PARSEDATE ON CACHE INTERNAL "")
set(CURL_DISABLE_POP ON CACHE INTERNAL "")
set(CURL_DISABLE_PROGRESS_METER ON CACHE INTERNAL "")
set(CURL_DISABLE_PROXY ON CACHE INTERNAL "")
set(CURL_DISABLE_RTSP ON CACHE INTERNAL "")
set(CURL_DISABLE_SHUFFLE_DNS ON CACHE INTERNAL "")
set(CURL_DISABLE_SMB ON CACHE INTERNAL "")
set(CURL_DISABLE_SMTP ON CACHE INTERNAL "")
set(CURL_DISABLE_SOCKETPAIR ON CACHE INTERNAL "")
set(CURL_DISABLE_TELNET ON CACHE INTERNAL "")
set(CURL_DISABLE_TFTP ON CACHE INTERNAL "")
set(CURL_DISABLE_OPENSSL_AUTO_LOAD_CONFIG ON CACHE INTERNAL "")

# CPR options
if (POLICY CMP0135)
    # CPR downloads a cUrl archive resulting in the warning about policy CMP0135.
    # However, if we use cmake_policy(...), we still get that warning. So change
    # the default instead
    set(CMAKE_POLICY_DEFAULT_CMP0135 NEW)
endif()
set(CPR_ENABLE_SSL OFF CACHE INTERNAL "")
set(CURL_ZLIB OFF CACHE INTERNAL "")
FetchContent_Declare(cpr
    GIT_REPOSITORY https://github.com/libcpr/cpr.git
    GIT_TAG 1.8.2
    UPDATE_DISCONNECTED ON
    )
FetchContent_MakeAvailable(cpr)

add_executable(sseClock main.cpp)
target_link_libraries(sseClock -static)
target_link_libraries(sseClock -mwindows)
target_link_libraries(sseClock cpr nlohmann_json::nlohmann_json fmt::fmt)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
