[package]
name = "sse_clock"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
ctrlc = "3.4.2"
log = { version = "0.4.22", features = ["std"] }
notify = { version = "6.1.1", default-features = false }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tray-item = "0.10.0"
ureq = { version = "2.9.1", features = ["json"], default-features = false }
windows = { version = "0.57.0", features = [
    "Win32_System_Console",
    "Win32_Foundation",
] }

[build-dependencies]
embed-resource = "2.3"
